added tests, new domcrawler/cssselector dependency, more work done fleshing this out

--- a/tests/test.html
+++ b/tests/test.html
@@ -5,11 +5,12 @@
     <title>Test Title</title>
   </head>
   <body>
+    <blink>Look at me!</blink>
     <table>
       <tr>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
+        <th>1</th>
+        <th>1</th>
+        <th>1</th>
       </tr>
       <tr>
         <td>2</td>
