--- a/tests/test.html
+++ b/tests/test.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <blink>Look at me!</blink>
+
     <table>
       <tr>
-        <th>1</th>
-        <th>1</th>
-        <th>1</th>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
       </tr>
       <tr>
         <td>2</td>
@@ -18,6 +19,20 @@
         <td>2</td>
       </tr>
     </table>
-    <img src="http://placehold.it" alt>
+
+    <table>
+      <tr>
+        <td>0</td>
+        <td>0</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>a</td>
+        <td>a</td>
+        <td>a</td>
+      </tr>
+    </table>
+
+    <img src="http://placehold.it" alt="">
   </body>
 </html>
