--- a/tests/test.html
+++ b/tests/test.html
@@ -24,17 +24,21 @@
 
     <table>
       <tr>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
+        <th>0</th>
+        <th>0</th>
+        <th>0</th>
       </tr>
       <tr>
-        <td>a</td>
-        <td>a</td>
-        <td>a</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
       </tr>
     </table>
 
-    <img src="http://placehold.it" alt="">
+    <img src="pepe.jpg" alt="">
+
+    <img src="pepe.jpg" alt="pepe.jpg">
+
+    <img src="pepe.jpg" alt="Wow, I am a really long and unnecessary image description! I should probably be condensed into something more terse.">
   </body>
 </html>
